<resources>
  <string name="app_name">BsBanking</string>
  <string name="address">Address</string>
  <string name="tokenize">Tokenize</string>
  <string name="cash_in">Cash in</string>
  <string name="cash_out">Cash out</string>
  <string name="amount">Amount</string>
  <string name="password">Password</string>
  <string name="bank_account">Bank account</string>
  <string name="balanceOf">Balance of</string>
  <string name="clear_cache">Clear cache</string>
  <string name="success_tokenize">Success tokenize</string>
  <string name="success_cash_in">Success cash in</string>
  <string name="success_cash_out">Success cash out</string>
  <string name="success_clear_cache">Success clear cache</string>
  <string name="failure">Failure</string>
</resources>
